fix: enforce overflow-x hidden to solve mobile jitter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 @layer base {
-  body {
+  html, body {
     @apply bg-dark text-white;
+    overflow-x: hidden;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
   }
 }
